smoof v1.0.9 (Release date: ...):
============

* Parameter set of predefined smoof function now contains a single vector parameter
  instead of multiple single numeric parameters. This is consistent with function
  calls now, since these always expect a single vector or list.
* Added helper function get{Lower,Upper}BoxConstraints
* smoof functions now expect an optional 'minimize' argument which indicates which
  objectives should be minimized or maximized respectively
* Fixed some wrong tag assigments
* Fixed global optimum of Giunta function
* Added function makeFunctionByName, which expects a function name. The corresponding
  generator is then called. Useful if you want, e.g., filter functions by tags and
  generate them directly afterwards.

smoof v1.0 (Release date: 2015-05-19):
==========

* First submission to CRAN.