@@ -35,6 +35,9 @@ S3method(hasGlobalOptimum,smoof_single_objective_function)
 S3method(hasGlobalOptimum,smoof_wrapped_function)
 S3method(hasOtherConstraints,smoof_function)
 S3method(hasOtherConstraints,smoof_wrapped_function)
+S3method(hasTags,character)
+S3method(hasTags,smoof_function)
+S3method(hasTags,smoof_generator)
 S3method(isMultiobjective,smoof_function)
 S3method(isMultiobjective,smoof_wrapped_function)
 S3method(isNoisy,smoof_function)
@@ -69,6 +72,7 @@ export(hasBoxConstraints)
 export(hasConstraints)
 export(hasGlobalOptimum)
 export(hasOtherConstraints)
+export(hasTags)
 export(isMultiobjective)
 export(isNoisy)
 export(isSingleobjective)
