@@ -12,6 +12,7 @@ smoof v1.0.9 (Release date: ...):
 * Added function makeFunctionByName, which expects a function name. The corresponding
   generator is then called. Useful if you want, e.g., filter functions by tags and
   generate them directly afterwards.
+* Added hasTags helper function.
 
 smoof v1.0 (Release date: 2015-05-19):
 ==========
